--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "microluxe20",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "A free, open source tabletop game based on the Microlite20 ruleset.",
   "main": "index.js",
   "scripts": {
@@ -11,17 +11,17 @@
     "url": "https://github.com/kgrubb/microluxe20"
   },
   "author": "Keli Grubb",
-  "license": "LicenseRef-LICENSE",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
     "url": "https://github.com/kgrubb/microluxe20/issues"
   },
   "homepage": "https://github.com/kgrubb/microluxe20",
   "devDependencies": {
-    "cheerio": "^0.19.0",
-    "gulp": "^3.9.0",
-    "gulp-markdown-pdf": "^3.0.0",
+    "cheerio": "^0.20.0",
+    "gulp": "^3.9.1",
+    "gulp-markdown-pdf": "^4.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-zip": "^3.1.0",
+    "gulp-zip": "^3.2.0",
     "through": "^2.3.8"
   }
 }
