--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
   "bugs": {
     "url": "https://github.com/kgrubb/microluxe20/issues"
   },
-  "homepage": "https://github.com/kgrubb/microluxe20",
+  "homepage": "https://microluxe20.com",
   "devDependencies": {
-    "cheerio": "^0.20.0",
     "gulp": "^3.9.1",
     "gulp-markdown-pdf": "^4.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-zip": "^3.2.0",
-    "through": "^2.3.8"
+    "gulp-zip": "^3.2.0"
   }
 }
