remove redundant npm install, separate compile and
release commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ language: node_js
 node_js:
   - '6'
 sudo: false
-before_script:
-  - npm install
-script: npm run compile && npm run release
+script:
+  - npm run compile
+  - npm run release
 deploy:
   provider: releases
   api_key:
