updated contributing guide to reflect changes made in package.json. Cleaned up class ability names. Updated 'downed' state to deplete character's highest stat, instead of STR. Clarified save rolls. Clarified attack bonuses. Removed 2-handed weapon bonus, since they were already the highest rated damaging items and also had comlex weapon bonuses too. Spellcaster rework & simplification. Spell levels are now evenly distributed and HP cost is equal to the spell's level. This makes it a lot easier to tell which spells are unlocked and how much they cost to cast.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "microluxe20",
-    "version": "1.7.1",
+    "version": "1.7.2",
     "description": "A free, open source tabletop game based on the Microlite20 ruleset.",
     "main": "index.js",
     "scripts": {
-        "compile": "PATH=$(npm bin):$PATH gulp compile",
-        "watch": "PATH=$(npm bin):$PATH gulp watch",
-        "release": "PATH=$(npm bin):$PATH gulp release"
+        "compile": "npm install && gulp compile",
+        "watch": "npm install && gulp watch",
+        "release": "npm install && gulp release"
     },
     "repository": {
         "type": "git",
@@ -21,6 +21,6 @@
     "devDependencies": {
         "gulp": "^3.9.1",
         "gulp-markdown-pdf": "^4.0.0",
-        "gulp-zip": "^3.2.0"
+        "gulp-zip": "^4.0.0"
     }
 }
