--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://microluxe20.com",
     "devDependencies": {
         "gulp": "^3.9.1",
+        "gulp-changed": "^3.1.0",
         "gulp-markdown-pdf": "^4.0.0",
         "gulp-zip": "^4.0.0"
     }
