--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 git:
-  depth: 4
+  depth: 1
 language: node_js
 node_js:
   - '6'
+  - '8'
 sudo: false
 script:
+  - npm install
+  - npm test
   - npm run compile
   - npm run release
 deploy:
