--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp": "^4.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-markdown-pdf": "^6.0.0",
-    "gulp-zip": "^4.1.0"
+    "gulp-zip": "^4.1.0",
+    "js-yaml": "^3.10.0",
+    "through2": "^2.0.3"
   }
 }
