--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,17 @@ git:
   depth: 1
 language: node_js
 node_js:
-  - '6'
-  - '8'
+  - 'lts'
+  - 'node'
 sudo: false
 script:
-  - npm install
-  - npm test
+  # install dependencies
+  - npm i
+  # run linting rules
+  - npm t
+  # compile the documents
   - npm run compile
+  # build a release zip
   - npm run release
 deploy:
   provider: releases
