:memo: Update Licensing and information on derivative work.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/kgrubb/microluxe20"
   },
   "author": "Keli Grubb",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/kgrubb/microluxe20/issues"
   },
