Finish splitting documents. Fixup document styling.
Still needs a bit of work, and there's a fair amount of text that needs to be
reflowed, but it's almost done.

--- a/src/data/gm-damage.yml
+++ b/src/data/gm-damage.yml
@@ -24,7 +24,7 @@ data:
     - "**Deathblade** | Injury | DC 20 | -1d6 STR/-2d6 STR | 1,800 gp."
     - "**Insanity Mist** | Inhaled | DC 15 | -1d4 MIND/-2d6 MIND | 1,500 gp."
     - "**Nitharit** | Contact | DC 13 | 0/-3d6 STR | 650 gp."
-    - "**Oil of Taggit** | Ingested | DC 15 | 0/unconsciousness | 90 gp."
+    - "**Oil of Taggit** | Ingested | DC 15 | 0/uncons. | 90 gp."
     - "**Malys Root Paste** | Contact | DC 16 | -1 DEX/-2d4 DEX | 500 gp."
     - "**Monstrous Scorpion (tiny)** | In­jury | DC 12 | -1 STR/-1 STR | 50 gp."
     - "**Monstrous Scorpion (small)** | In­jury | DC 12 | -1d2 STR/- 1d2 STR | 100 gp."
@@ -35,7 +35,7 @@ data:
     - "**Monstrous Spider (large)** | Injury | DC 13 | -1d6 STR/-1d6 STR | 250 gp."
     - "**Monstrous Spider (huge)** | Injury | DC 16 | -1d8 STR/-1d8 STR | 500 gp."
     - "**Sassone Leaf Residue** | Contact | DC 16 | -2d12 HP/-1d8 STR | 300 gp."
-    - "**Sleep Poison** | Injury | DC 13 | unconsciousness/ unconsciousness for 2d4 hours | 75 gp."
+    - "**Sleep Poison** | Injury | DC 13 | uncons./ uncons. for 2d4 hours | 75 gp."
     - "**Snake (medium viper)** | Injury | DC 11 | -1d6 STR/-1d6 STR | 120 gp."
     - "**Snake (large viper)** | Injury | DC 11 | -1d6 STR/-1d6 STR | 120 gp."
     - "**Snake (huge viper)** | Injury | DC 14 | -1d6 STR/-1d6 STR | 250 gp."
