--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "^2.8.0",
     "gulp": "^4.0.0",
     "gulp-changed": "^3.2.0",
+    "gulp-changed-in-place": "^2.3.0",
     "gulp-markdown-pdf": "^6.0.0",
     "gulp-zip": "^4.1.0",
     "js-yaml": "^3.10.0",
