--- a/src/data/races.yml
+++ b/src/data/races.yml
@@ -11,13 +11,13 @@ data:
     - "**Halflings** | +1 DEX, +1 STR"
     - "**Gnomes** | +1 DEX, +1 MIND"
     - "**Forged** | +2 natural armor bonus to AC"
-    - "**Dwarves** | +2 STR & can use a Waraxe, regardless of class"
+    - "**Dwarves** | +2 STR & can use a Waraxe,<br> regardless of class"
     - "**Minotaurs** | +3 STR, -1 MIND"
     - "**Lycanthropes** | +1 DEX, +1 to Guile skill"
     - "**Goblins** | +3 DEX, -1 MIND"
     - "**Giants** | +3 STR, -1 DEX"
     - "**Orcs** | +3 STR, -1 MIND"
-    - "**Dwarmir** | +1 STR, +1 to any 1 Skill & can use a Waraxe, regardless of class"
+    - "**Dwarmir** | +1 STR, +1 to any 1 Skill & can use a Waraxe,<br> regardless of class"
     - "**Elvir** | +1 DEX, and +1 to any 1 Skill"
     - "**Orkeir** | +2 STR, -1 MIND, +1 to Physical skill"
     - "**Tauremir** | +2 STR, -1 MIND,  +1 to any 1 Skill"
