--- a/src/data/weapons.yml
+++ b/src/data/weapons.yml
@@ -2,96 +2,96 @@
 id: light
 columns: 2
 header:
-    - Weapon | Cost | Dmg. | Range | Complexity | Weight
-    - :--- | :--- | :--- | :--- | :--- | :---
+    - "**Weapon** | Cost | Dmg. | Range | Complexity"
+    - :--- | :--- | :--- | :--- | :---
 data:
-    - Unarmed | — | 1d2 | — | Simple | —
-    - Cestus | 5gp | 1d4 | — | Simple | 1 lb.
-    - Dagger | 2gp | 1d4 | 10 ft. | Simple | 1 lb.
-    - Mace, light | 5gp | 1d6 | — | Simple | 4 lbs.
-    - Sickle | 5gp | 1d6 | — | Simple | 2 lbs.
-    - Pick, light | 5gp | 1d4 | — | Complex | 3 lbs.
-    - Handaxe | 5gp | 1d4 | — | Complex | 3 lbs.
-    - Hook | 8gp | 1d6 | — | Complex | 2 lbs
-    - Sap | 8gp | 1d6 | — | Complex | 2 lbs
-    - Gladius | 8gp | 1d6 | — | Complex | 3 lbs
-    - Axe, throwing | 10gp | 1d6 | 10ft. | Complex | 2 lbs
-    - Hammer, light | 12gp | 1d6 | 20ft. | Complex | 2 lbs
+    - Unarmed | — | 1d2 | — | Simple
+    - Cestus | 5gp | 1d4 | — | Simple
+    - Dagger | 2gp | 1d4 | 10 ft. | Simple
+    - Mace, light | 5gp | 1d6 | — | Simple
+    - Sickle | 5gp | 1d6 | — | Simple
+    - Pick, light | 5gp | 1d4 | — | Complex
+    - Handaxe | 5gp | 1d4 | — | Complex
+    - Hook | 8gp | 1d6 | — | Complex
+    - Sap | 8gp | 1d6 | — | Complex
+    - Gladius | 8gp | 1d6 | — | Complex
+    - Axe, throwing | 10gp | 1d6 | 10ft. | Complex
+    - Hammer, light | 12gp | 1d6 | 20ft. | Complex
 
 ---
 id: ranged
 columns: 2
 header:
-    - Weapon | Cost | Dmg. | Range | Complexity | Weight
-    - :--- | :--- | :--- | :--- | :--- | :---
+    - "**Weapon** | Cost | Dmg. | Range | Complexity"
+    - :--- | :--- | :--- | :--- | :---
 data:
-    - Sling | 1gp | 1d4 | 40ft. | Simple | —
-    - Atlatl | 5gp | 1d6 | 60ft. | Simple | 2 lbs.
-    - Crossbow, light | 35gp | 1d8 | 80ft. | Simple | 4 lbs.
-    - Crossbow, medium | 50gp | 1d10 | 120ft. | Simple | 6 lbs.
-    - Crossbow, heavy | 85gp | 2d6 | 160ft. | Complex | 8 lbs.
-    - Crossbow, hand | 100gp | 1d4 | 30ft. | Complex | 2 lbs.
-    - Shortbow | 30gp | 1d6 | 60ft. | Complex | 2 lbs.
-    - Shortbow, composite | 55gp | 1d8 | 80ft. | Complex | 2 lbs.
-    - Longbow | 75gp | 1d10 | 100ft. | Complex | 3 lbs.
-    - Longbow, composite | 100gp | 2d6 | 120ft. | Complex | 3 lbs.
+    - Sling | 1gp | 1d4 | 40ft. | Simple
+    - Atlatl | 5gp | 1d6 | 60ft. | Simple
+    - Crossbow, light | 35gp | 1d8 | 80ft. | Simple
+    - Crossbow, medium | 50gp | 1d10 | 120ft. | Simple
+    - Crossbow, heavy | 85gp | 2d6 | 160ft. | Complex
+    - Crossbow, hand | 100gp | 1d4 | 30ft. | Complex
+    - Shortbow | 30gp | 1d6 | 60ft. | Complex
+    - Shortbow, composite | 55gp | 1d8 | 80ft. | Complex
+    - Longbow | 75gp | 1d10 | 100ft. | Complex
+    - Longbow, composite | 100gp | 2d6 | 120ft. | Complex
 
 
 ---
 id: thrown
 columns: 2
 header:
-    - Weapon | Cost | Dmg. | Range | Complexity | Weight
-    - :--- | :--- | :--- | :--- | :--- | :---
+    - "**Weapon** | Cost | Dmg. | Range | Complexity"
+    - :--- | :--- | :--- | :--- | :---
 data:
-    - Dart | 5sp | 1d4 | 20ft. | Simple | 0.5 lbs.
-    - Kunai | 2gp | 1d4 | 60ft. | Simple | 1 lb.
-    - Javelin | 10gp | 1d6 | 30ft. | Simple | 2 lbs.
-    - Net | 20gp | — | 10ft. | Complex | 6 lbs.
-    - Shuriken | 10gp | 1d6 | 30ft. | Complex | 0.25 lbs.
+    - Dart | 5sp | 1d4 | 20ft. | Simple
+    - Kunai | 2gp | 1d4 | 60ft. | Simple
+    - Javelin | 10gp | 1d6 | 30ft. | Simple
+    - Net | 20gp | — | 10ft. | Complex
+    - Shuriken | 10gp | 1d6 | 30ft. | Complex
 
 ---
 id: two-handed
 columns: 2
 header:
-    - Weapon | Cost | Dmg. | Range | Complexity | Weight
-    - :--- | :--- | :--- | :--- | :--- | :---
+    - "**Weapon** | Cost | Dmg. | Range | Complexity"
+    - :--- | :--- | :--- | :--- | :---
 data:
-    - Bayonet | 2gp | 1d4 | — | Simple | 1 lb.
-    - Quarterstaff | 3gp | 1d6 | — | Simple | 4 lbs.
-    - Longspear | 5gp | 1d8 | — | Simple | 9 lbs.
-    - Spear | 8gp | 1d8 | 20ft. | Simple | 6 lbs.
-    - Falchion | 25gp | 1d6 | — | Complex | 8 lbs.
-    - Flail, heavy | 30gp | 1d8 | — | Complex | 10 lbs.
-    - Glaive | 30gp | 1d8 | — | Complex | 10 lbs.
-    - Greatclub | 30gp | 1d8 | — | Complex | 8 lbs.
-    - Lance | 30gp | 1d8 | — | Complex | 10 lbs.
-    - Scythe | 35gp | 2d4 | — | Complex | 10 lbs.
-    - Chain, spiked | 35gp | 2d4 | — | Complex | 10 lbs.
-    - Guisarme | 35gp | 2d4 | — | Complex | 12 lbs.
-    - Greataxe | 40gp | 1d10 | — | Complex | 12 lbs.
-    - Halberd | 40gp | 1d10 | — | Complex | 12 lbs.
-    - Greatsword | 50gp | 2d6 | — | Complex | 8 lbs.
+    - Bayonet | 2gp | 1d4 | — | Simple
+    - Quarterstaff | 3gp | 1d6 | — | Simple
+    - Longspear | 5gp | 1d8 | — | Simple
+    - Spear | 8gp | 1d8 | 20ft. | Simple
+    - Falchion | 25gp | 1d6 | — | Complex
+    - Flail, heavy | 30gp | 1d8 | — | Complex
+    - Glaive | 30gp | 1d8 | — | Complex
+    - Greatclub | 30gp | 1d8 | — | Complex
+    - Lance | 30gp | 1d8 | — | Complex
+    - Scythe | 35gp | 2d4 | — | Complex
+    - Chain, spiked | 35gp | 2d4 | — | Complex
+    - Guisarme | 35gp | 2d4 | — | Complex
+    - Greataxe | 40gp | 1d10 | — | Complex
+    - Halberd | 40gp | 1d10 | — | Complex
+    - Greatsword | 50gp | 2d6 | — | Complex
 
 ---
 id: one-handed
 columns: 2
 header:
-    - Weapon | Cost | Dmg. | Range | Complexity | Weight
-    - :--- | :--- | :--- | :--- | :--- | :---
+    - "**Weapon** | Cost | Dmg. | Range | Complexity"
+    - :--- | :--- | :--- | :--- | :---
 data:
-    - Club | 2gp | 1d6 | 10ft. | Simple | 3 lbs.
-    - Shortspear | 4gp | 1d6 | 20ft. | Simple | 3 lbs.
-    - Mace, heavy | 12gp | 1d8 | — | Simple | 8 lbs.
-    - Morningstar | 12gp | 1d8 | — | Simple | 6 lbs.
-    - Whip | 1gp | 1d3 | — | Complex | 2 lbs.
-    - Pick, heavy | 15gp | 1d6 | — | Complex | 6 lbs.
-    - Rapier | 15gp | 1d6 | — | Complex | 2 lbs.
-    - Scimitar | 15gp | 1d6 | — | Complex | 4 lbs.
-    - Warhammer | 20gp | 1d8 | — | Complex | 5 lbs.
-    - Battleaxe | 20gp | 1d8 | — | Complex | 6 lbs.
-    - Flail | 20gp | 1d8 | — | Complex | 5 lbs.
-    - Longsword | 20gp | 1d8 | — | Complex | 4 lbs.
-    - Trident | 25gp | 1d8 | 10ft. | Complex | 4 lbs.
-    - Waraxe | 35gp | 1d10 | — | Complex | 8 lbs.
-    - Sword, bastard | 35gp | 1d10 | — | Complex | 6 lbs.
+    - Club | 2gp | 1d6 | 10ft. | Simple
+    - Shortspear | 4gp | 1d6 | 20ft. | Simple
+    - Mace, heavy | 12gp | 1d8 | — | Simple
+    - Morningstar | 12gp | 1d8 | — | Simple
+    - Whip | 1gp | 1d3 | — | Complex
+    - Pick, heavy | 15gp | 1d6 | — | Complex
+    - Rapier | 15gp | 1d6 | — | Complex
+    - Scimitar | 15gp | 1d6 | — | Complex
+    - Warhammer | 20gp | 1d8 | — | Complex
+    - Battleaxe | 20gp | 1d8 | — | Complex
+    - Flail | 20gp | 1d8 | — | Complex
+    - Longsword | 20gp | 1d8 | — | Complex
+    - Trident | 25gp | 1d8 | 10ft. | Complex
+    - Waraxe | 35gp | 1d10 | — | Complex
+    - Sword, bastard | 35gp | 1d10 | — | Complex
