Add new GM Guide intro, minor text cleanups.

--- a/src/data/srd-skills.yml
+++ b/src/data/srd-skills.yml
@@ -8,7 +8,7 @@ data:
     - "**Appraise –** com+MIND"
     - "**Balance –** phys+DEX"
     - "**Bluff –** com+MIND"
-    - "**Climb –** phys+DEX or STR, whichever is highest"
+    - "**Climb –** phys+DEX or STR"
     - "**Concentration –** doesn't apply. GM's fiat applies"
     - "**Decipher Script –** know+MIND or com+MIND"
     - "**Diplomacy –** com+MIND"
@@ -17,7 +17,7 @@ data:
     - "**Escape Artist –** guile+DEX or guile+STR"
     - "**Forgery –** com+DEX"
     - "**Gather Information –** com+MIND"
-    - "**Handle Animal –** com+MIND or com+STR if the animal is bigger"
+    - "**Handle Animal –** com+MIND, com+STR"
     - "**Heal –** know+MIND"
     - "**Hide –** guile+DEX"
     - "**Intimidate –** could be phys+STR, or guile+MIND or com+STR"
