--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "microluxe20",
-  "version": "1.7.4",
+  "version": "1.8.0",
   "description": "A free, open source tabletop game based on the Microlite20 ruleset.",
   "main": "index.js",
   "scripts": {
@@ -20,18 +20,18 @@
   },
   "homepage": "https://microluxe20.com",
   "devDependencies": {
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   },
   "dependencies": {
     "gulp": "^4.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-changed-in-place": "^2.3.0",
     "gulp-markdown-pdf": "^6.0.0",
-    "gulp-zip": "^4.1.0",
-    "js-yaml": "^3.10.0",
-    "through2": "^2.0.3",
-    "gulp-remarkable": "^2.1.0"
+    "gulp-remarkable": "^2.1.0",
+    "gulp-zip": "^4.2.0",
+    "js-yaml": "^3.12.0",
+    "through2": "^2.0.5"
   }
 }
