Add metamagic, range, light, and bulk rules.
- Rebalanced metamagic costs. Now metamagic costs 1-2 HP less.
- Stat drain takes a long rest and a full day to recover from.
- Added carrying capacity secondary stat.

The following changes are thanks to JohnG on Discord:
- Added new counter metamagics
- Added 'Attune' metamagic as the start of an elemental damage system
- Added rules for Light, Range, and Bulk

--- a/src/data/races.yml
+++ b/src/data/races.yml
@@ -21,5 +21,5 @@ data:
     - "**Elvir** | +1 DEX, and +1 to any 1 Skill"
     - "**Orkeir** | +2 STR, -1 MIND, +1 to Physical skill"
     - "**Tauremir** | +2 STR, -1 MIND,  +1 to any 1 Skill"
-    - "**Gorimir** | a +1 DEX, and +1 to any 1 Skill"
+    - "**Gorimir** | +1 DEX, and +1 to any 1 Skill"
     - "**Slaan** | +2 MIND, +1 DEX, -1 to STR"
