--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ jobs:
     container:
       image: node:lts
     steps:
-    - uses: actions/checkout@v2
-    - name: lint
-    - run: |
-        npm t
+      - name: checkout
+      - uses: actions/checkout@v2
+      - name: lint
+      - run: npm t
