install deps in build and test stages

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,4 +10,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: lint
-        run: npm t
+        run: |
+          npm ci
+          npm t
