--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project
         run: |
+          npm ci
           npm run compile
           npm run release
       - name: Create Release
