--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-zip": "^5.0.2",
     "js-yaml": "^3.14.0",
     "through2": "^4.0.2",
+    "pify": "^4.0.1",
     "tmp-promise": "^1.0.5"
   }
 }
