Better error handling for wkhtmltopdf.
- Install the patched version of wkhtmltopdf.
- Enable local file access for wkhtmltopdf 0.12.6
- Increase codeclimate cognitive complexity threshold.
- Update release.yml build script
- Add contributing docs

Why don't node images come with sudo?
Node LTS is part of the CI runtime image, so we work around the problem by not using docker!

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,9 @@
 version: "2"
 checks:
   method-lines:
-      config:
-        threshold: 35
+    config:
+      threshold: 35
+  method-complexity:
+    config:
+      threshold: 10
+
