--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,38 +1,47 @@
 name: Create and Upload Release
-on:
-  push:
-    tags: ['*']
+on: [push]
 jobs:
   build:
-    name: Upload Release Asset
-    runs-on: ubuntu-latest
-    container:
-      image: node:lts
+    name: Build Source Files
+    runs-on: ubuntu-18.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: |
+          sudo apt-fast update
+          sudo apt-fast install -y xfonts-75dpi xfonts-base libjpeg-turbo8
+          wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb
+          sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb
       - name: Build project
         run: |
           npm ci
           npm run compile
           npm run release
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: microluxe20-core
+          path: release/*.zip
+          retention-days: 30
+
+  upload-release:
+    name: Upload Release Asset
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: microluxe20-core
+          path: release/
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
+          files: release/*.zip
+          draft: true
           prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/microluxe20_${{ github.ref }}.zip
-          asset_name: microluxe20_${{ github.ref }}.zip
-          asset_content_type: application/zip
