--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
     "gulp-changed-in-place": "^2.3.0",
-    "gulp-markdown-pdf": "^8.0.0",
     "gulp-remarkable": "^2.1.0",
     "gulp-zip": "^5.0.2",
     "js-yaml": "^3.14.0",
-    "through2": "^4.0.2"
+    "through2": "^4.0.2",
+    "tmp-promise": "^1.1.0"
   }
 }
