--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: microluxe20-${GITHUB_SHA}
+          name: microluxe20-${{ github.sha }}
           path: release/*.zip
           retention-days: 30
